--- a/sample07/index.html
+++ b/sample07/index.html
@@ -1,36 +1,33 @@
 <!DOCTYPE html>
 <html>
-
-<head>
-    <meta charset="utf-8">
+  <head>
+    <meta charset="utf-8" />
     <title></title>
 
-    <link rel="stylesheet" href="../assets/style.css">
-</head>
+    <link rel="stylesheet" href="../assets/style.css" />
+  </head>
 
-<body>
+  <body>
     <div class="frame">
-        <h1 class="frame__title">JavaScript</h1>
+      <h1 class="frame__title">JavaScript</h1>
 
-        <div class="frame__inner">
-            <div id="app">
-                <ul v-for="week of weeks" v-bind:key="week">
-                    <li>{{week}}</li>
-                </ul>
-
-            </div>
+      <div class="frame__inner">
+        <div id="app">
+          <ul v-for="week of weeks" v-bind:key="week">
+            <li>{{week}}</li>
+          </ul>
         </div>
+      </div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
     <script>
-        var app = new Vue({
-            el: "#app",
-            data: {
-                weeks: ['日','月','火','水','木','金','土'],
-            }
-        });
+      var app = new Vue({
+        el: "#app",
+        data: {
+          weeks: ["日", "月", "火", "水", "木", "金", "土"],
+        },
+      });
     </script>
-</body>
-
+  </body>
 </html>
